--- a/templates/photography.html
+++ b/templates/photography.html
@@ -14,7 +14,7 @@
         <i class="fab fa-instagram"></i>
         <span>Follow Me</span>
     </div>
-    <a href="https://www.instagram.com/{{ insta_username }}/" target="_blank" class="instagram-profile-link">
+    <a href="https://www.instagram.com/_domain.me?igsh=MXZ6eWNpZXVia2VmZw==/" target="_blank" class="instagram-profile-link">
         <div class="instagram-profile-content">
             <div class="instagram-icon-large">
                 <i class="fab fa-instagram"></i>
@@ -27,7 +27,7 @@
     </a>
 </div>
 
-<!-- Download Success Message -->
+
 
 
 <!-- Hero Section -->
